--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,24 +1,18 @@
-<div class="container">
-  <div class="modal">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-body">
-  <form class="form-signin col-3">
+
+  <body class="text-center">
+    <form class="form-signin" [formGroup]="loginForm" (ngSubmit)="signIn(loginForm.value)" >
+  <img class="mb-4" src="assets/img/user-icon-large.png" alt="" width="72" height="72">
   <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
   <label for="inputEmail" class="sr-only">Email address</label>
-  <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+  <input formControlName="email" type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
   <label for="inputPassword" class="sr-only">Password</label>
-  <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+  <input formControlName="password" type="password" id="inputPassword" class="form-control" placeholder="Password" required>
   <div class="checkbox mb-3">
     <label>
       <input type="checkbox" value="remember-me"> Remember me
     </label>
   </div>
   <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-  <p class="mt-5 mb-3 text-muted">&copy; 2017-2020</p>
-</form>
-</div>
-</div>
-</div>
-</div>
-</div>
+  <p class="mt-5 mb-3 text-muted">&copy; DevelopersInc 2020</p>
+ </form>
+</body>
