--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,22 +20,12 @@
             <div class="nav navbar-right ml-auto">
                 <ul class="nav navbar-nav">
                     <li class="nav-item " [class] = "router.url === '/' ? ' active':''"><a class="nav-link " href="/">Home</a></li>
-                    <li class="nav-item"  ><a class="nav-link " href="/user/home">View Users</a></li>
+                    <li class="nav-item"  ><a class="nav-link" routerLink="/user/view">View Users</a></li> 
+                    <li *ngIf="authService.isLoggedIn() && authService.isAdminUser()" class="nav-item"  ><a class="nav-link " href="/user/home">Manage Users</a></li>
                     <li class="nav-item"  ><a class="nav-link " href="/user/create">Create New</a></li>
-
-                    <li *ngIf="authService.isLoggedIn() && authService.isAdminUser()" class="nav-item"><a class="nav-link" routerLink="/admin/home">Admin</a></li> 
-                    <li class="nav-item"  ><a class="nav-link" routerLink="/admin/user">View Users</a></li> 
                     <li *ngIf="!authService.isLoggedIn()" class="nav-item"  ><a class="nav-link" routerLink="/login">Login</a> </li> 
                     <li *ngIf="authService.isLoggedIn()" class="nav-item"  ><a class="nav-link" (click)="logout()">Logout</a> </li> 
-
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Welcome {{authService.getLoginName()}}</a>
-                        <div class="dropdown-menu" aria-labelledby="dropdown01">
-                            <a class="dropdown-item" routerLink="/admin/home">Admin</a>
-                            <a class="dropdown-item" routerLink="/admin/user">View Users</a>
-                            <a class="dropdown-item" routerLink="/login">Logout</a> 
-                        </div>
-                    </li>
+                    <li *ngIf="authService.isLoggedIn()" class="nav-item"  ><a class="nav-link" (click)="getCurrentUser()">{{authService.getLoginName()}}</a> </li> 
                 </ul>
             </div>
         </div> 
