--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
 <!-- * * * * * * * to get started with your project! * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
-<header *ngIf="router.url !== '/login'" >   
+<header *ngIf="router.url !== '/login' && router.url !== '/register'" >   
         <nav class="navbar navbar-expand navbar-dark flex-column flex-md-row bd-navbar" style="background-color:midnightblue;">
             <div class="container">
               <!-- logo -->
