--- a/src/app/home-welcome/home-welcome.component.html
+++ b/src/app/home-welcome/home-welcome.component.html
@@ -1,8 +1,25 @@
-<h2>Welcome to the User Management App</h2>
+<div class="jumbotron text-center">
+    <div class="container">
+        <h1>Welcome to the User Management App</h1>
+        <p>
+            This is a simple Angular website built to help manage users. It uses Bootsrtap for the interface and connects to a file based database.
+            Feel free to play around with it. For the source code, click on the botton below.
+        </p>
+        <a href="https://github.com/vectorcrael/UserManager.git" class="btn btn-primary">
+            GitHub Repo
+        </a>
+        </div>
+</div>
+
+<h2>How to Use the Site</h2>
 <p>
+    Use the menu above to navagate the site.
+    <br>
     For the regular users you are only allowed to view the users and register a new user.
     <br>
     For administrators you can make some changes to the user details so long as you don't break anything!
     <br>
-    Use the menu above to navagate the site.
 </p>
+
+
+
