--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,7 +1,17 @@
 body {
     padding-top: 5rem;
+    background-color: #f5f5f5;
   }
   .starter-template {
     padding: 3rem 1.5rem;
     text-align: center;
   }
+  .footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px; /* Set the fixed height of the footer here */
+    line-height: 60px; /* Vertically center the text there */
+    background-color: #f5f5f5;
+  }
+  
