--- a/src/app/crud/home/home.component.html
+++ b/src/app/crud/home/home.component.html
@@ -1,7 +1,18 @@
 <div *ngIf="users.length > 0" class="container">
     
     <h2>Manage Users</h2>
-    
+
+        <form class="form-inline my-2 my-lg-0 right ml-auto">
+            <br>
+            <div class="btn-group" role="group" aria-label="Options">
+                <button class="btn btn-info" type="button" (click)="reloadUsers()">Reload Users</button>
+                <button class="btn btn-primary" type="button" [routerLink]="['/user/create/']">Create New User</button>
+                <button class="btn btn-secondary" (click)="onEnter(box.value)"  >Search User</button>
+            </div>
+            <input #box class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+            <br>
+        </form>
+    <br>
     <table class="table table-striped table-bordered" >
         <thead>
             <tr>
@@ -32,12 +43,6 @@
     </table>
 </div>
 <div *ngIf="users.length == 0" class="container">
-    <h2>No Users Yet Users</h2>
-</div>
-
-<div class="container">
-    <div class="btn-group" role="group" aria-label="Options">
-        <button class="btn btn-info" type="button" (click)="reloadUsers()">Reload Users</button>
-        <button class="btn btn-primary" type="button" [routerLink]="['/user/create/']">Create New User</button>
-    </div>
+    <h2>No Users Matching Search</h2>
+    <button class="btn btn-info" type="button" (click)="reloadUsers()">Reload Users</button>
 </div>
