--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,22 +1,4 @@
-.bd-placeholder-img {
-    font-size: 1.125rem;
-    text-anchor: middle;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-  }
-
-  @media (min-width: 768px) {
-    .bd-placeholder-img-lg {
-      font-size: 3.5rem;
-    }
-}
-
 html,
-body {
-  height: 100%;
-}
 
 body {
   display: -ms-flexbox;
@@ -26,6 +8,7 @@ body {
   padding-top: 40px;
   padding-bottom: 40px;
   background-color: #f5f5f5;
+  text-align: center !important;
 }
 
 .form-signin {
