--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,7 @@
-
-  <body class="text-center">
-    <form class="form-signin" [formGroup]="loginForm" (ngSubmit)="signIn(loginForm.value)" >
+<div class ="text-center" style="background-color: #f5f5f5;">
+<form class="form-signin" [formGroup]="loginForm" (ngSubmit)="signIn(loginForm.value)" >
+  <br>
+  <br>
   <img class="mb-4" src="assets/img/user-icon-large.png" alt="" width="72" height="72">
   <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
   <div class="alert alert-danger" *ngIf="this.invalidLogin"> 
@@ -26,8 +27,5 @@
     <button class="btn btn-lg btn-primary" type="submit">Sign in</button>
     <button class="btn btn-lg btn-info" routerLink="/register">Register</button>
   </div>
-  <div style="margin-bottom: 0;" > 
-      <p class="mt-5 mb-3 text-muted">&copy; DevelopersInc 2020</p>
-  </div>
  </form>
-</body>
+</div>
