--- a/src/app/crud/home/home.component.html
+++ b/src/app/crud/home/home.component.html
@@ -25,7 +25,7 @@
             </tr>
         </thead>
         <tbody>
-            <tr *ngFor="let user of users; trackBy: trackCourse"> <!--if the items have not changed, no need to reload them-->
+            <tr *ngFor="let user of pageOfItems;"> <!--trackBy: trackCourse; if the items have not changed, no need to reload them-->
                 <td>{{user.id}}</td>
                 <td>{{user.name}}</td>
                 <td>{{user.surname}}</td>
@@ -41,6 +41,9 @@
             </tr>
         </tbody>
     </table>
+    <div class="card-footer pb-0 pt-3">
+        <jw-pagination [items]="users" (changePage)="onChangePage($event)"></jw-pagination>
+    </div>
 </div>
 <div *ngIf="users.length == 0" class="container">
     <h2>No Users Matching Search</h2>
